# Lam

./: .gitignore  Issue.md  Lam.cabal  Notes.md  README.md  Todos.org  build.sh  hie.yaml  lam.agda-lib  package.yaml  stack.yaml
.github/workflows/: haskell.yml
Examples/: div.lam  examples  factorial.lam  id.lam  in  in.lam  lines.lam  small.lam  stdlib.lam  typed  typed.lam  untyped.lam
Examples/Typed/: church.lam  more.lam
Examples/Untyped/: factorial.lam
app/: Main.hs
src/: TaglessFinal.hs
src/Agda/: Defs.agda  Evaluator.agda  Exports.agda  Expr.agda  Formalization.agda  TypeChecker.agda  Utils.agda
src/Agda/MAlonzo/Code/: Defs.hs  Utils.hs
src/Agda/MAlonzo/Code/Algebra/: Bundles.hs  Morphism.hs  Structures.hs
src/Agda/MAlonzo/Code/Algebra/Consequences/: Propositional.hs
src/Agda/MAlonzo/Code/Algebra/Construct/NaturalChoice/: Max.hs  MinOp.hs
src/Agda/MAlonzo/Code/Algebra/Morphism/: Structures.hs
src/Agda/MAlonzo/Code/Algebra/Properties/: BooleanAlgebra.hs  CommutativeSemigroup.hs  Group.hs  Lattice.hs
src/Agda/MAlonzo/Code/Algebra/Structures/: Biased.hs
src/Agda/MAlonzo/Code/Axiom/: UniquenessOfIdentityProofs.hs
src/Agda/MAlonzo/Code/Category/: Applicative.hs
src/Agda/MAlonzo/Code/Category/Applicative/: Indexed.hs
src/Agda/MAlonzo/Code/Category/Monad/: Indexed.hs
src/Agda/MAlonzo/Code/Data/: Empty.hs  Product.hs  Sum.hs
src/Agda/MAlonzo/Code/Data/Bool/: Properties.hs
src/Agda/MAlonzo/Code/Data/Char/: Base.hs  Properties.hs
src/Agda/MAlonzo/Code/Data/List/: NonEmpty.hs  Properties.hs
src/Agda/MAlonzo/Code/Data/List/Membership/: DecSetoid.hs  Propositional.hs
src/Agda/MAlonzo/Code/Data/List/NonEmpty/: Base.hs
src/Agda/MAlonzo/Code/Data/Nat/: Properties.hs
src/Agda/MAlonzo/Code/Data/String/: Properties.hs
src/Agda/MAlonzo/Code/Data/Unit/: Properties.hs
src/Agda/MAlonzo/Code/Function/: Bundles.hs  Injection.hs  LeftInverse.hs
src/Agda/MAlonzo/Code/Function/Definitions/: Core2.hs
src/Agda/MAlonzo/Code/Function/Metric/: Bundles.hs
src/Agda/MAlonzo/Code/Relation/: Unary.hs
src/Agda/MAlonzo/Code/Relation/Binary/: Consequences.hs  Lattice.hs
src/Agda/MAlonzo/Code/Relation/Binary/Construct/: On.hs  (+1 more)
src/Agda/MAlonzo/Code/Relation/Nullary/: Product.hs  Reflects.hs  Sum.hs
src/Agda/MAlonzo/Code/Relation/Unary/: Properties.hs
src/Lam/: Command.hs  Context.hs  Data.hs  Eval.hs  Evaluator.hs  Expr.hs  Handler.hs  Lexer.x  Nat.hs  Parser.hs  Parser.y  Prog.hs  Program.hs  RawExpr.hs  Result.hs  Type.hs  TypeChecker.hs  Utils.hs  UtilsAgda.hs  Wrapper.hs
src/Lam/Agda/Lam/: Data.agda  Evaluator.agda  Export.agda  Formalization.agda  Formalization2.agda  FormalizationEvaluator.agda  FormalizationTypeChecker.agda  Nat.agda  Preservation.agda  Progress.agda  TypeChecker.agda  UtilsAgda.agda  View.agda
src/Lam/Expr/: Data.hs  Evaluator.hs  Funs.hs  TypeChecker.hs
src/Lam/Parser/: Base.hs  Lexer.x  Parser.y
src/Lam/Terminal/: Raw.hs  ReadRepl.hs
src/Lam/Unverified/: Data.hs  Evaluator.hs  TypeChecker.hs  UtilsAgda.hs
src/MAlonzo/Code/: Defs.hs  Evaluator.hs  Exports.hs  Strict.hs  TypeChecker.hs
src/MAlonzo/Code/Algebra/: Core.hs  Definitions.hs
src/MAlonzo/Code/Algebra/Consequences/: Setoid.hs
src/MAlonzo/Code/Algebra/Construct/: LiftedChoice.hs
src/MAlonzo/Code/Algebra/Construct/NaturalChoice/: Base.hs  MaxOp.hs  Min.hs  MinMaxOp.hs
src/MAlonzo/Code/Algebra/Properties/: DistributiveLattice.hs  Semigroup.hs  Semilattice.hs
src/MAlonzo/Code/Category/: Functor.hs  Monad.hs
src/MAlonzo/Code/Data/: Bool.hs  String.hs  Unit.hs
src/MAlonzo/Code/Data/Empty/: Irrelevant.hs
src/MAlonzo/Code/Data/Fin/: Base.hs
src/MAlonzo/Code/Data/List/: Base.hs  Categorical.hs  Extrema.hs
src/MAlonzo/Code/Data/List/Extrema/: Core.hs
src/MAlonzo/Code/Data/List/Membership/: DecPropositional.hs  Setoid.hs
src/MAlonzo/Code/Data/Maybe/: Base.hs
src/MAlonzo/Code/Data/Nat/: Base.hs
src/MAlonzo/Code/Data/Nat/Properties/: Core.hs
src/MAlonzo/Code/Data/Product/: Properties.hs
src/MAlonzo/Code/Data/String/: Base.hs
src/MAlonzo/Code/Data/Sum/: Base.hs  Properties.hs
src/MAlonzo/Code/Data/Sum/Function/: Propositional.hs  Setoid.hs
src/MAlonzo/Code/Data/Unit/: Base.hs
src/MAlonzo/Code/Data/Unit/Polymorphic/: Properties.hs
src/MAlonzo/Code/Data/Vec/: Base.hs
src/MAlonzo/Code/Function/: Base.hs  Bijection.hs  Definitions.hs  Equality.hs  Equivalence.hs  HalfAdjointEquivalence.hs  Inverse.hs  Related.hs  Structures.hs  Surjection.hs
src/MAlonzo/Code/Function/Definitions/: Core1.hs
src/MAlonzo/Code/Function/Metric/: Structures.hs
src/MAlonzo/Code/Function/Metric/Nat/: Bundles.hs
src/MAlonzo/Code/Function/Related/: TypeIsomorphisms.hs
src/MAlonzo/Code/Induction/: WellFounded.hs
src/MAlonzo/Code/Relation/: Nullary.hs
src/MAlonzo/Code/Relation/Binary/: Bundles.hs  Definitions.hs  PropositionalEquality.hs  Structures.hs
src/MAlonzo/Code/Relation/Binary/Construct/: Intersection.hs  NonStrictToStrict.hs
src/MAlonzo/Code/Relation/Binary/Indexed/: Heterogeneous.hs
src/MAlonzo/Code/Relation/Binary/Properties/: Preorder.hs
src/MAlonzo/Code/Relation/Binary/PropositionalEquality/: Core.hs  Properties.hs
src/MAlonzo/Code/Relation/Nullary/: Decidable.hs  Negation.hs
src/MAlonzo/Code/Relation/Nullary/Negation/: Core.hs
test/: Fixtures.hs  Main.hs
test/Fixtures/: ChurchNum.hs  Common.hs  Misc.hs
(+37 files in other folders)
