name:                Lam
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Lam#readme
license:             BSD3
license-file:        LICENSE
author:              Tomaz Gomes Mascarenhas
maintainer:          tomgm1502@gmail.com
copyright:           2022 Tomaz Gomes Mascarenhas
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Lam
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      Lam
    , base >= 4.7 && < 5
    , mtl >= 2.2
    , containers >= 0.6

library
  exposed-modules:
    Lam.Command
    Lam.Context
    Lam.Expr.Data
    Lam.Expr.Evaluator
    Lam.Expr.Funs
    Lam.Expr.TypeChecker
    Lam.Expr
    Lam.Handler
    Lam.Parser
    Lam.Parser.Base
    Lam.Parser.Lexer
    Lam.Parser.Parser
    Lam.Result
  other-modules:
    MAlonzo.Code.TypeChecker
    MAlonzo.Code.Agda.Builtin.Bool
    MAlonzo.Code.Agda.Builtin.Equality
    MAlonzo.Code.Agda.Builtin.List
    MAlonzo.Code.Agda.Builtin.Maybe
    MAlonzo.Code.Agda.Builtin.Nat
    MAlonzo.Code.Agda.Builtin.Sigma
    MAlonzo.Code.Agda.Builtin.String
    MAlonzo.Code.Agda.Builtin.Unit
    MAlonzo.Code.Agda.Primitive
    MAlonzo.Code.Data.Bool.Base
    MAlonzo.Code.Data.Empty
    MAlonzo.Code.Data.Empty.Irrelevant
    MAlonzo.Code.Data.Maybe.Base
    MAlonzo.Code.Data.Nat.Base
    MAlonzo.Code.Data.Sum.Base
    MAlonzo.Code.Data.These.Base
    MAlonzo.Code.Defs
    MAlonzo.Code.Function.Base
    MAlonzo.Code.Level
    MAlonzo.Code.Relation.Nullary
    MAlonzo.Code.Relation.Nullary.Reflects
    MAlonzo.Code.Utils
    MAlonzo.RTE
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  ImportQualifiedPost
  build-tools: happy, alex
  build-depends:
      base >= 4.7 && < 5
    , array >= 0.4
    , containers >= 0.5
    , mtl >= 2.2
    , text >= 1.2

test-suite unit-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    test
  other-modules:
    Fixtures.ChurchNum
    Fixtures.Common
    Fixtures.Misc
    Fixtures
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Lam
    , base >= 4.7 && < 5
    , tasty
    , tasty-hunit
    , QuickCheck
    , tasty-quickcheck
  default-language: Haskell2010



