name:                Lam
version:             0.1.0.0
homepage:            https://github.com/githubuser/Lam#readme
license:             BSD3
license-file:        LICENSE
author:              Tomaz Gomes Mascarenhas
maintainer:          tomgm1502@gmail.com
copyright:           2022 Tomaz Gomes Mascarenhas
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lam
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      Lam
    , base >= 4.7 && < 5
    , mtl >= 2.2
    , containers >= 0.6

library
  exposed-modules:
    Lam.Context
    Lam.Data
    Lam.Nat
    Lam.Evaluator
    Lam.Handler
    Lam.Parser
    Lam.Parser.Base
    Lam.Parser.Lexer
    Lam.Parser.Parser
    Lam.Result
    Lam.TypeChecker
    Lam.Utils
    Lam.UtilsAgda
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  ImportQualifiedPost
  ghc-options: -Wall
  build-tools: happy, alex
  build-depends:
      base >= 4.7 && < 5
    , array >= 0.4
    , containers >= 0.5
    , mtl >= 2.2
    , text >= 1.2
    , unix >= 2.5
    , ansi-terminal
    , haskeline

test-suite unit-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    test
  other-modules:
    Fixtures.ChurchNum
    Fixtures.Common
    Fixtures.Misc
    Fixtures
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      Lam
    , base >= 4.7 && < 5
    , tasty
    , tasty-hunit
    , QuickCheck
    , tasty-quickcheck
  default-language: Haskell2010

